--- a/packages/docs/mkdocs.yml
+++ b/packages/docs/mkdocs.yml
@@ -4,7 +4,7 @@ site_url: https://r2explorer.com/
 docs_dir: pages
 theme:
   name: material
-#  custom_dir: .overrides
+  #  custom_dir: .overrides
   logo: assets/logo.svg
   favicon: assets/logo.svg
   font:
@@ -13,7 +13,7 @@ theme:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: green
+      primary: #423fad
       accent: orange
       toggle:
         icon: material/weather-night
@@ -22,7 +22,7 @@ theme:
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: green
+      primary: #423fad
       accent: orange
       toggle:
         icon: material/weather-sunny
@@ -41,10 +41,10 @@ theme:
   language: en
 repo_name: G4brym/R2-Explorer
 repo_url: https://github.com/G4brym/R2-Explorer
-edit_uri: ''
+edit_uri: ""
 plugins:
   - search
-#  - social
+  #  - social
   - termynal
   - markdownextradata:
       data: data
@@ -81,7 +81,7 @@ markdown_extensions:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format ''
+          format: !!python/name:pymdownx.superfences.fence_code_format ""
   - pymdownx.tabbed
   - pymdownx.highlight:
       anchor_linenums: true
